posters update endpoint changed
