# backend/api/openapi/openapi.yaml
@@ -166,9 +166,9 @@ paths:
           required: true
       responses:
         '200':
-          description: 'постер успешно создан'
+          description: 'постер успешно обновлен'
           schema:
-            $ref: '#/definitions/ResultResponse'
+            $ref: '#/definitions/Poster'
         '400':
           description: 'Bad request'
           schema:
